Let's see if this fixes the orientation and playlist issue on mobile, also made the playlist easier to close and got rid of confusing/superfluous close button at top right.

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ html,body {
 }
 
 #playlist-wrapper.open {
-    max-height: 400px;
+    max-height: min(400px, calc(100vh - 70px));
     opacity: 1;
 }
 
